Trabalho 7/expr.output
Terminais sem uso na gramática

   T_FIM
   T_TRUE
   T_FALSE


Gramática

    0 $accept: Programa $end

    1 Programa: ListaFuncoes MMain BlocoPrincipal
    2         | MMain BlocoPrincipal

    3 MMain: %empty

    4 ListaFuncoes: ListaFuncoes MZerador Funcao
    5             | Funcao

    6 MZerador: %empty

    7 Funcao: EscopoFuncao BlocoPrincipal
    8       | EscopoFuncaoVazia BlocoPrincipal

    9 EscopoFuncaoVazia: TipoRetorno T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES

   10 EscopoFuncao: TipoRetorno T_ID T_ABRE_PARENTESES DeclParametros T_FECHA_PARENTESES

   11 TipoRetorno: T_VOID
   12            | T_INT
   13            | T_DOUBLE
   14            | T_STRING

   15 DeclParametros: DeclParametros T_VIRGULA Parametro
   16               | Parametro

   17 Parametro: Tipo T_ID

   18 BlocoPrincipal: T_ABRE_CHAVES Declaracoes ListaCmd T_FECHA_CHAVES
   19               | T_ABRE_CHAVES ListaCmd T_FECHA_CHAVES

   20 Declaracoes: Declaracoes Declaracao
   21            | Declaracao

   22 Declaracao: Tipo ListaId T_PONTO_E_VIRGULA

   23 Tipo: T_INT
   24     | T_DOUBLE
   25     | T_STRING

   26 ListaId: ListaId T_VIRGULA T_ID
   27        | T_ID

   28 Bloco: T_ABRE_CHAVES ListaCmd T_FECHA_CHAVES

   29 ListaCmd: ListaCmd Comando
   30         | Comando

   31 Comando: CmdSe
   32        | CmdEnquanto
   33        | CmdAtrib
   34        | CmdEscrita
   35        | CmdLeitura
   36        | ChamadaProc
   37        | Retorno

   38 Retorno: T_RETURN ExpressaoAritmetica T_PONTO_E_VIRGULA
   39        | T_RETURN T_LITERAL T_PONTO_E_VIRGULA

   40 CmdSe: T_IF T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco
   41      | T_IF T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco NLogico T_ELSE MLogico Bloco

   42 NLogico: %empty

   43 CmdEnquanto: T_WHILE MLogico T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco

   44 CmdAtrib: T_ID T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   45         | T_ID T_IGUAL T_LITERAL T_PONTO_E_VIRGULA
   46         | T_ID T_ADICAO T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   47         | T_ID T_SUBTRACAO T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   48         | T_ID T_ADICAO T_ADICAO T_PONTO_E_VIRGULA
   49         | T_ID T_SUBTRACAO T_SUBTRACAO T_PONTO_E_VIRGULA

   50 CmdEscrita: T_PRINT CmdEscritaMarcador T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   51           | T_PRINT CmdEscritaMarcador T_ABRE_PARENTESES T_LITERAL T_FECHA_PARENTESES T_PONTO_E_VIRGULA

   52 CmdEscritaMarcador: %empty

   53 CmdLeitura: T_READ T_ABRE_PARENTESES T_ID T_FECHA_PARENTESES T_PONTO_E_VIRGULA

   54 ChamadaProc: ChamadaFuncao T_PONTO_E_VIRGULA

   55 ChamadaFuncao: T_ID T_ABRE_PARENTESES ListaParametros T_FECHA_PARENTESES
   56              | T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES

   57 ListaParametros: ListaParametros T_VIRGULA ExpressaoAritmetica
   58                | ListaParametros T_VIRGULA T_LITERAL
   59                | ExpressaoAritmetica
   60                | T_LITERAL

   61 ExpressaoAritmetica: ExpressaoAritmetica T_ADICAO TExpressaoAritmetica
   62                    | ExpressaoAritmetica T_SUBTRACAO TExpressaoAritmetica
   63                    | ExpressaoAritmetica T_BIT_DIREITA TExpressaoAritmetica
   64                    | ExpressaoAritmetica T_BIT_ESQUERDA TExpressaoAritmetica
   65                    | TExpressaoAritmetica

   66 TExpressaoAritmetica: TExpressaoAritmetica T_MULTIPLICACAO FExpressaoAritmetica
   67                     | TExpressaoAritmetica T_DIVISAO FExpressaoAritmetica
   68                     | TExpressaoAritmetica T_RESTO FExpressaoAritmetica
   69                     | FExpressaoAritmetica

   70 FExpressaoAritmetica: T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES
   71                     | T_SUBTRACAO FExpressaoAritmetica
   72                     | T_NUM
   73                     | T_ID
   74                     | ChamadaFuncao

   75 ExpressaoLogica: ExpressaoLogica T_AND MLogico FExpressaoLogica
   76                | ExpressaoLogica T_OR MLogico FExpressaoLogica
   77                | FExpressaoLogica

   78 MLogico: %empty

   79 FExpressaoLogica: T_NOT FExpressaoLogica
   80                 | T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES
   81                 | ExpressaoAritmetica T_IGUAL_IGUAL ExpressaoAritmetica
   82                 | ExpressaoAritmetica T_DIFERENTE ExpressaoAritmetica
   83                 | ExpressaoAritmetica T_MAIOR ExpressaoAritmetica
   84                 | ExpressaoAritmetica T_MAIOR_IGUAL ExpressaoAritmetica
   85                 | ExpressaoAritmetica T_MENOR ExpressaoAritmetica
   86                 | ExpressaoAritmetica T_MENOR_IGUAL ExpressaoAritmetica


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
T_BIT_DIREITA (258) 63
T_BIT_ESQUERDA (259) 64
T_ADICAO (260) 46 48 61
T_SUBTRACAO (261) 47 49 62 71
T_MULTIPLICACAO (262) 66
T_DIVISAO (263) 67
T_RESTO (264) 68
T_IGUAL (265) 44 45 46 47
T_ABRE_PARENTESES (266) 9 10 40 41 43 50 51 53 55 56 70 80
T_FECHA_PARENTESES (267) 9 10 40 41 43 50 51 53 55 56 70 80
T_ABRE_CHAVES (268) 18 19 28
T_FECHA_CHAVES (269) 18 19 28
T_INT (270) 12 23
T_DOUBLE (271) 13 24
T_STRING (272) 14 25
T_VOID (273) 11
T_IF (274) 40 41
T_WHILE (275) 43
T_ELSE (276) 41
T_PRINT (277) 50 51
T_READ (278) 53
T_RETURN (279) 38 39
T_ID (280) 9 10 17 26 27 44 45 46 47 48 49 53 55 56 73
T_LITERAL (281) 39 45 51 58 60
T_FIM (282)
T_NUM (283) 72
T_VIRGULA (284) 15 26 57 58
T_PONTO_E_VIRGULA (285) 22 38 39 44 45 46 47 48 49 50 51 53 54
T_AND (286) 75
T_NOT (287) 79
T_OR (288) 76
T_TRUE (289)
T_FALSE (290)
T_MAIOR_IGUAL (291) 84
T_MENOR_IGUAL (292) 86
T_DIFERENTE (293) 82
T_IGUAL_IGUAL (294) 81
T_MAIOR (295) 83
T_MENOR (296) 85


Não terminais com as regras onde eles aparecem

$accept (42)
    à esquerda: 0
Programa (43)
    à esquerda: 1 2, à direita: 0
MMain (44)
    à esquerda: 3, à direita: 1 2
ListaFuncoes (45)
    à esquerda: 4 5, à direita: 1 4
MZerador (46)
    à esquerda: 6, à direita: 4
Funcao (47)
    à esquerda: 7 8, à direita: 4 5
EscopoFuncaoVazia (48)
    à esquerda: 9, à direita: 8
EscopoFuncao (49)
    à esquerda: 10, à direita: 7
TipoRetorno (50)
    à esquerda: 11 12 13 14, à direita: 9 10
DeclParametros (51)
    à esquerda: 15 16, à direita: 10 15
Parametro (52)
    à esquerda: 17, à direita: 15 16
BlocoPrincipal (53)
    à esquerda: 18 19, à direita: 1 2 7 8
Declaracoes (54)
    à esquerda: 20 21, à direita: 18 20
Declaracao (55)
    à esquerda: 22, à direita: 20 21
Tipo (56)
    à esquerda: 23 24 25, à direita: 17 22
ListaId (57)
    à esquerda: 26 27, à direita: 22 26
Bloco (58)
    à esquerda: 28, à direita: 40 41 43
ListaCmd (59)
    à esquerda: 29 30, à direita: 18 19 28 29
Comando (60)
    à esquerda: 31 32 33 34 35 36 37, à direita: 29 30
Retorno (61)
    à esquerda: 38 39, à direita: 37
CmdSe (62)
    à esquerda: 40 41, à direita: 31
NLogico (63)
    à esquerda: 42, à direita: 41
CmdEnquanto (64)
    à esquerda: 43, à direita: 32
CmdAtrib (65)
    à esquerda: 44 45 46 47 48 49, à direita: 33
CmdEscrita (66)
    à esquerda: 50 51, à direita: 34
CmdEscritaMarcador (67)
    à esquerda: 52, à direita: 50 51
CmdLeitura (68)
    à esquerda: 53, à direita: 35
ChamadaProc (69)
    à esquerda: 54, à direita: 36
ChamadaFuncao (70)
    à esquerda: 55 56, à direita: 54 74
ListaParametros (71)
    à esquerda: 57 58 59 60, à direita: 55 57 58
ExpressaoAritmetica (72)
    à esquerda: 61 62 63 64 65, à direita: 38 44 46 47 50 57 59 61
    62 63 64 70 81 82 83 84 85 86
TExpressaoAritmetica (73)
    à esquerda: 66 67 68 69, à direita: 61 62 63 64 65 66 67 68
FExpressaoAritmetica (74)
    à esquerda: 70 71 72 73 74, à direita: 66 67 68 69 71
ExpressaoLogica (75)
    à esquerda: 75 76 77, à direita: 40 41 43 75 76 80
MLogico (76)
    à esquerda: 78, à direita: 40 41 43 75 76
FExpressaoLogica (77)
    à esquerda: 79 80 81 82 83 84 85 86, à direita: 75 76 77 79


Estado 0

    0 $accept: . Programa $end

    T_INT     deslocar, e ir ao estado 1
    T_DOUBLE  deslocar, e ir ao estado 2
    T_STRING  deslocar, e ir ao estado 3
    T_VOID    deslocar, e ir ao estado 4

    $padrão  reduzir usando a regra 3 (MMain)

    Programa           ir ao estado 5
    MMain              ir ao estado 6
    ListaFuncoes       ir ao estado 7
    Funcao             ir ao estado 8
    EscopoFuncaoVazia  ir ao estado 9
    EscopoFuncao       ir ao estado 10
    TipoRetorno        ir ao estado 11


Estado 1

   12 TipoRetorno: T_INT .

    $padrão  reduzir usando a regra 12 (TipoRetorno)


Estado 2

   13 TipoRetorno: T_DOUBLE .

    $padrão  reduzir usando a regra 13 (TipoRetorno)


Estado 3

   14 TipoRetorno: T_STRING .

    $padrão  reduzir usando a regra 14 (TipoRetorno)


Estado 4

   11 TipoRetorno: T_VOID .

    $padrão  reduzir usando a regra 11 (TipoRetorno)


Estado 5

    0 $accept: Programa . $end

    $end  deslocar, e ir ao estado 12


Estado 6

    2 Programa: MMain . BlocoPrincipal

    T_ABRE_CHAVES  deslocar, e ir ao estado 13

    BlocoPrincipal  ir ao estado 14


Estado 7

    1 Programa: ListaFuncoes . MMain BlocoPrincipal
    4 ListaFuncoes: ListaFuncoes . MZerador Funcao

    T_ABRE_CHAVES  reduzir usando a regra 3 (MMain)
    $padrão       reduzir usando a regra 6 (MZerador)

    MMain     ir ao estado 15
    MZerador  ir ao estado 16


Estado 8

    5 ListaFuncoes: Funcao .

    $padrão  reduzir usando a regra 5 (ListaFuncoes)


Estado 9

    8 Funcao: EscopoFuncaoVazia . BlocoPrincipal

    T_ABRE_CHAVES  deslocar, e ir ao estado 13

    BlocoPrincipal  ir ao estado 17


Estado 10

    7 Funcao: EscopoFuncao . BlocoPrincipal

    T_ABRE_CHAVES  deslocar, e ir ao estado 13

    BlocoPrincipal  ir ao estado 18


Estado 11

    9 EscopoFuncaoVazia: TipoRetorno . T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES
   10 EscopoFuncao: TipoRetorno . T_ID T_ABRE_PARENTESES DeclParametros T_FECHA_PARENTESES

    T_ID  deslocar, e ir ao estado 19


Estado 12

    0 $accept: Programa $end .

    $padrão  aceitar


Estado 13

   18 BlocoPrincipal: T_ABRE_CHAVES . Declaracoes ListaCmd T_FECHA_CHAVES
   19               | T_ABRE_CHAVES . ListaCmd T_FECHA_CHAVES

    T_INT     deslocar, e ir ao estado 20
    T_DOUBLE  deslocar, e ir ao estado 21
    T_STRING  deslocar, e ir ao estado 22
    T_IF      deslocar, e ir ao estado 23
    T_WHILE   deslocar, e ir ao estado 24
    T_PRINT   deslocar, e ir ao estado 25
    T_READ    deslocar, e ir ao estado 26
    T_RETURN  deslocar, e ir ao estado 27
    T_ID      deslocar, e ir ao estado 28

    Declaracoes    ir ao estado 29
    Declaracao     ir ao estado 30
    Tipo           ir ao estado 31
    ListaCmd       ir ao estado 32
    Comando        ir ao estado 33
    Retorno        ir ao estado 34
    CmdSe          ir ao estado 35
    CmdEnquanto    ir ao estado 36
    CmdAtrib       ir ao estado 37
    CmdEscrita     ir ao estado 38
    CmdLeitura     ir ao estado 39
    ChamadaProc    ir ao estado 40
    ChamadaFuncao  ir ao estado 41


Estado 14

    2 Programa: MMain BlocoPrincipal .

    $padrão  reduzir usando a regra 2 (Programa)


Estado 15

    1 Programa: ListaFuncoes MMain . BlocoPrincipal

    T_ABRE_CHAVES  deslocar, e ir ao estado 13

    BlocoPrincipal  ir ao estado 42


Estado 16

    4 ListaFuncoes: ListaFuncoes MZerador . Funcao

    T_INT     deslocar, e ir ao estado 1
    T_DOUBLE  deslocar, e ir ao estado 2
    T_STRING  deslocar, e ir ao estado 3
    T_VOID    deslocar, e ir ao estado 4

    Funcao             ir ao estado 43
    EscopoFuncaoVazia  ir ao estado 9
    EscopoFuncao       ir ao estado 10
    TipoRetorno        ir ao estado 11


Estado 17

    8 Funcao: EscopoFuncaoVazia BlocoPrincipal .

    $padrão  reduzir usando a regra 8 (Funcao)


Estado 18

    7 Funcao: EscopoFuncao BlocoPrincipal .

    $padrão  reduzir usando a regra 7 (Funcao)


Estado 19

    9 EscopoFuncaoVazia: TipoRetorno T_ID . T_ABRE_PARENTESES T_FECHA_PARENTESES
   10 EscopoFuncao: TipoRetorno T_ID . T_ABRE_PARENTESES DeclParametros T_FECHA_PARENTESES

    T_ABRE_PARENTESES  deslocar, e ir ao estado 44


Estado 20

   23 Tipo: T_INT .

    $padrão  reduzir usando a regra 23 (Tipo)


Estado 21

   24 Tipo: T_DOUBLE .

    $padrão  reduzir usando a regra 24 (Tipo)


Estado 22

   25 Tipo: T_STRING .

    $padrão  reduzir usando a regra 25 (Tipo)


Estado 23

   40 CmdSe: T_IF . T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco
   41      | T_IF . T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco NLogico T_ELSE MLogico Bloco

    T_ABRE_PARENTESES  deslocar, e ir ao estado 45


Estado 24

   43 CmdEnquanto: T_WHILE . MLogico T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco

    $padrão  reduzir usando a regra 78 (MLogico)

    MLogico  ir ao estado 46


Estado 25

   50 CmdEscrita: T_PRINT . CmdEscritaMarcador T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   51           | T_PRINT . CmdEscritaMarcador T_ABRE_PARENTESES T_LITERAL T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 52 (CmdEscritaMarcador)

    CmdEscritaMarcador  ir ao estado 47


Estado 26

   53 CmdLeitura: T_READ . T_ABRE_PARENTESES T_ID T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_ABRE_PARENTESES  deslocar, e ir ao estado 48


Estado 27

   38 Retorno: T_RETURN . ExpressaoAritmetica T_PONTO_E_VIRGULA
   39        | T_RETURN . T_LITERAL T_PONTO_E_VIRGULA

    T_SUBTRACAO        deslocar, e ir ao estado 49
    T_ABRE_PARENTESES  deslocar, e ir ao estado 50
    T_ID               deslocar, e ir ao estado 51
    T_LITERAL          deslocar, e ir ao estado 52
    T_NUM              deslocar, e ir ao estado 53

    ChamadaFuncao         ir ao estado 54
    ExpressaoAritmetica   ir ao estado 55
    TExpressaoAritmetica  ir ao estado 56
    FExpressaoAritmetica  ir ao estado 57


Estado 28

   44 CmdAtrib: T_ID . T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   45         | T_ID . T_IGUAL T_LITERAL T_PONTO_E_VIRGULA
   46         | T_ID . T_ADICAO T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   47         | T_ID . T_SUBTRACAO T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   48         | T_ID . T_ADICAO T_ADICAO T_PONTO_E_VIRGULA
   49         | T_ID . T_SUBTRACAO T_SUBTRACAO T_PONTO_E_VIRGULA
   55 ChamadaFuncao: T_ID . T_ABRE_PARENTESES ListaParametros T_FECHA_PARENTESES
   56              | T_ID . T_ABRE_PARENTESES T_FECHA_PARENTESES

    T_ADICAO           deslocar, e ir ao estado 58
    T_SUBTRACAO        deslocar, e ir ao estado 59
    T_IGUAL            deslocar, e ir ao estado 60
    T_ABRE_PARENTESES  deslocar, e ir ao estado 61


Estado 29

   18 BlocoPrincipal: T_ABRE_CHAVES Declaracoes . ListaCmd T_FECHA_CHAVES
   20 Declaracoes: Declaracoes . Declaracao

    T_INT     deslocar, e ir ao estado 20
    T_DOUBLE  deslocar, e ir ao estado 21
    T_STRING  deslocar, e ir ao estado 22
    T_IF      deslocar, e ir ao estado 23
    T_WHILE   deslocar, e ir ao estado 24
    T_PRINT   deslocar, e ir ao estado 25
    T_READ    deslocar, e ir ao estado 26
    T_RETURN  deslocar, e ir ao estado 27
    T_ID      deslocar, e ir ao estado 28

    Declaracao     ir ao estado 62
    Tipo           ir ao estado 31
    ListaCmd       ir ao estado 63
    Comando        ir ao estado 33
    Retorno        ir ao estado 34
    CmdSe          ir ao estado 35
    CmdEnquanto    ir ao estado 36
    CmdAtrib       ir ao estado 37
    CmdEscrita     ir ao estado 38
    CmdLeitura     ir ao estado 39
    ChamadaProc    ir ao estado 40
    ChamadaFuncao  ir ao estado 41


Estado 30

   21 Declaracoes: Declaracao .

    $padrão  reduzir usando a regra 21 (Declaracoes)


Estado 31

   22 Declaracao: Tipo . ListaId T_PONTO_E_VIRGULA

    T_ID  deslocar, e ir ao estado 64

    ListaId  ir ao estado 65


Estado 32

   19 BlocoPrincipal: T_ABRE_CHAVES ListaCmd . T_FECHA_CHAVES
   29 ListaCmd: ListaCmd . Comando

    T_FECHA_CHAVES  deslocar, e ir ao estado 66
    T_IF            deslocar, e ir ao estado 23
    T_WHILE         deslocar, e ir ao estado 24
    T_PRINT         deslocar, e ir ao estado 25
    T_READ          deslocar, e ir ao estado 26
    T_RETURN        deslocar, e ir ao estado 27
    T_ID            deslocar, e ir ao estado 28

    Comando        ir ao estado 67
    Retorno        ir ao estado 34
    CmdSe          ir ao estado 35
    CmdEnquanto    ir ao estado 36
    CmdAtrib       ir ao estado 37
    CmdEscrita     ir ao estado 38
    CmdLeitura     ir ao estado 39
    ChamadaProc    ir ao estado 40
    ChamadaFuncao  ir ao estado 41


Estado 33

   30 ListaCmd: Comando .

    $padrão  reduzir usando a regra 30 (ListaCmd)


Estado 34

   37 Comando: Retorno .

    $padrão  reduzir usando a regra 37 (Comando)


Estado 35

   31 Comando: CmdSe .

    $padrão  reduzir usando a regra 31 (Comando)


Estado 36

   32 Comando: CmdEnquanto .

    $padrão  reduzir usando a regra 32 (Comando)


Estado 37

   33 Comando: CmdAtrib .

    $padrão  reduzir usando a regra 33 (Comando)


Estado 38

   34 Comando: CmdEscrita .

    $padrão  reduzir usando a regra 34 (Comando)


Estado 39

   35 Comando: CmdLeitura .

    $padrão  reduzir usando a regra 35 (Comando)


Estado 40

   36 Comando: ChamadaProc .

    $padrão  reduzir usando a regra 36 (Comando)


Estado 41

   54 ChamadaProc: ChamadaFuncao . T_PONTO_E_VIRGULA

    T_PONTO_E_VIRGULA  deslocar, e ir ao estado 68


Estado 42

    1 Programa: ListaFuncoes MMain BlocoPrincipal .

    $padrão  reduzir usando a regra 1 (Programa)


Estado 43

    4 ListaFuncoes: ListaFuncoes MZerador Funcao .

    $padrão  reduzir usando a regra 4 (ListaFuncoes)


Estado 44

    9 EscopoFuncaoVazia: TipoRetorno T_ID T_ABRE_PARENTESES . T_FECHA_PARENTESES
   10 EscopoFuncao: TipoRetorno T_ID T_ABRE_PARENTESES . DeclParametros T_FECHA_PARENTESES

    T_FECHA_PARENTESES  deslocar, e ir ao estado 69
    T_INT               deslocar, e ir ao estado 20
    T_DOUBLE            deslocar, e ir ao estado 21
    T_STRING            deslocar, e ir ao estado 22

    DeclParametros  ir ao estado 70
    Parametro       ir ao estado 71
    Tipo            ir ao estado 72


Estado 45

   40 CmdSe: T_IF T_ABRE_PARENTESES . ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco
   41      | T_IF T_ABRE_PARENTESES . ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco NLogico T_ELSE MLogico Bloco

    T_SUBTRACAO        deslocar, e ir ao estado 49
    T_ABRE_PARENTESES  deslocar, e ir ao estado 73
    T_ID               deslocar, e ir ao estado 51
    T_NUM              deslocar, e ir ao estado 53
    T_NOT              deslocar, e ir ao estado 74

    ChamadaFuncao         ir ao estado 54
    ExpressaoAritmetica   ir ao estado 75
    TExpressaoAritmetica  ir ao estado 56
    FExpressaoAritmetica  ir ao estado 57
    ExpressaoLogica       ir ao estado 76
    FExpressaoLogica      ir ao estado 77


Estado 46

   43 CmdEnquanto: T_WHILE MLogico . T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco

    T_ABRE_PARENTESES  deslocar, e ir ao estado 78


Estado 47

   50 CmdEscrita: T_PRINT CmdEscritaMarcador . T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   51           | T_PRINT CmdEscritaMarcador . T_ABRE_PARENTESES T_LITERAL T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_ABRE_PARENTESES  deslocar, e ir ao estado 79


Estado 48

   53 CmdLeitura: T_READ T_ABRE_PARENTESES . T_ID T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_ID  deslocar, e ir ao estado 80


Estado 49

   71 FExpressaoAritmetica: T_SUBTRACAO . FExpressaoAritmetica

    T_SUBTRACAO        deslocar, e ir ao estado 49
    T_ABRE_PARENTESES  deslocar, e ir ao estado 50
    T_ID               deslocar, e ir ao estado 51
    T_NUM              deslocar, e ir ao estado 53

    ChamadaFuncao         ir ao estado 54
    FExpressaoAritmetica  ir ao estado 81


Estado 50

   70 FExpressaoAritmetica: T_ABRE_PARENTESES . ExpressaoAritmetica T_FECHA_PARENTESES

    T_SUBTRACAO        deslocar, e ir ao estado 49
    T_ABRE_PARENTESES  deslocar, e ir ao estado 50
    T_ID               deslocar, e ir ao estado 51
    T_NUM              deslocar, e ir ao estado 53

    ChamadaFuncao         ir ao estado 54
    ExpressaoAritmetica   ir ao estado 82
    TExpressaoAritmetica  ir ao estado 56
    FExpressaoAritmetica  ir ao estado 57


Estado 51

   55 ChamadaFuncao: T_ID . T_ABRE_PARENTESES ListaParametros T_FECHA_PARENTESES
   56              | T_ID . T_ABRE_PARENTESES T_FECHA_PARENTESES
   73 FExpressaoAritmetica: T_ID .

    T_ABRE_PARENTESES  deslocar, e ir ao estado 61

    $padrão  reduzir usando a regra 73 (FExpressaoAritmetica)


Estado 52

   39 Retorno: T_RETURN T_LITERAL . T_PONTO_E_VIRGULA

    T_PONTO_E_VIRGULA  deslocar, e ir ao estado 83


Estado 53

   72 FExpressaoAritmetica: T_NUM .

    $padrão  reduzir usando a regra 72 (FExpressaoAritmetica)


Estado 54

   74 FExpressaoAritmetica: ChamadaFuncao .

    $padrão  reduzir usando a regra 74 (FExpressaoAritmetica)


Estado 55

   38 Retorno: T_RETURN ExpressaoAritmetica . T_PONTO_E_VIRGULA
   61 ExpressaoAritmetica: ExpressaoAritmetica . T_ADICAO TExpressaoAritmetica
   62                    | ExpressaoAritmetica . T_SUBTRACAO TExpressaoAritmetica
   63                    | ExpressaoAritmetica . T_BIT_DIREITA TExpressaoAritmetica
   64                    | ExpressaoAritmetica . T_BIT_ESQUERDA TExpressaoAritmetica

    T_BIT_DIREITA      deslocar, e ir ao estado 84
    T_BIT_ESQUERDA     deslocar, e ir ao estado 85
    T_ADICAO           deslocar, e ir ao estado 86
    T_SUBTRACAO        deslocar, e ir ao estado 87
    T_PONTO_E_VIRGULA  deslocar, e ir ao estado 88


Estado 56

   65 ExpressaoAritmetica: TExpressaoAritmetica .
   66 TExpressaoAritmetica: TExpressaoAritmetica . T_MULTIPLICACAO FExpressaoAritmetica
   67                     | TExpressaoAritmetica . T_DIVISAO FExpressaoAritmetica
   68                     | TExpressaoAritmetica . T_RESTO FExpressaoAritmetica

    T_MULTIPLICACAO  deslocar, e ir ao estado 89
    T_DIVISAO        deslocar, e ir ao estado 90
    T_RESTO          deslocar, e ir ao estado 91

    $padrão  reduzir usando a regra 65 (ExpressaoAritmetica)


Estado 57

   69 TExpressaoAritmetica: FExpressaoAritmetica .

    $padrão  reduzir usando a regra 69 (TExpressaoAritmetica)


Estado 58

   46 CmdAtrib: T_ID T_ADICAO . T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   48         | T_ID T_ADICAO . T_ADICAO T_PONTO_E_VIRGULA

    T_ADICAO  deslocar, e ir ao estado 92
    T_IGUAL   deslocar, e ir ao estado 93


Estado 59

   47 CmdAtrib: T_ID T_SUBTRACAO . T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   49         | T_ID T_SUBTRACAO . T_SUBTRACAO T_PONTO_E_VIRGULA

    T_SUBTRACAO  deslocar, e ir ao estado 94
    T_IGUAL      deslocar, e ir ao estado 95


Estado 60

   44 CmdAtrib: T_ID T_IGUAL . ExpressaoAritmetica T_PONTO_E_VIRGULA
   45         | T_ID T_IGUAL . T_LITERAL T_PONTO_E_VIRGULA

    T_SUBTRACAO        deslocar, e ir ao estado 49
    T_ABRE_PARENTESES  deslocar, e ir ao estado 50
    T_ID               deslocar, e ir ao estado 51
    T_LITERAL          deslocar, e ir ao estado 96
    T_NUM              deslocar, e ir ao estado 53

    ChamadaFuncao         ir ao estado 54
    ExpressaoAritmetica   ir ao estado 97
    TExpressaoAritmetica  ir ao estado 56
    FExpressaoAritmetica  ir ao estado 57


Estado 61

   55 ChamadaFuncao: T_ID T_ABRE_PARENTESES . ListaParametros T_FECHA_PARENTESES
   56              | T_ID T_ABRE_PARENTESES . T_FECHA_PARENTESES

    T_SUBTRACAO         deslocar, e ir ao estado 49
    T_ABRE_PARENTESES   deslocar, e ir ao estado 50
    T_FECHA_PARENTESES  deslocar, e ir ao estado 98
    T_ID                deslocar, e ir ao estado 51
    T_LITERAL           deslocar, e ir ao estado 99
    T_NUM               deslocar, e ir ao estado 53

    ChamadaFuncao         ir ao estado 54
    ListaParametros       ir ao estado 100
    ExpressaoAritmetica   ir ao estado 101
    TExpressaoAritmetica  ir ao estado 56
    FExpressaoAritmetica  ir ao estado 57


Estado 62

   20 Declaracoes: Declaracoes Declaracao .

    $padrão  reduzir usando a regra 20 (Declaracoes)


Estado 63

   18 BlocoPrincipal: T_ABRE_CHAVES Declaracoes ListaCmd . T_FECHA_CHAVES
   29 ListaCmd: ListaCmd . Comando

    T_FECHA_CHAVES  deslocar, e ir ao estado 102
    T_IF            deslocar, e ir ao estado 23
    T_WHILE         deslocar, e ir ao estado 24
    T_PRINT         deslocar, e ir ao estado 25
    T_READ          deslocar, e ir ao estado 26
    T_RETURN        deslocar, e ir ao estado 27
    T_ID            deslocar, e ir ao estado 28

    Comando        ir ao estado 67
    Retorno        ir ao estado 34
    CmdSe          ir ao estado 35
    CmdEnquanto    ir ao estado 36
    CmdAtrib       ir ao estado 37
    CmdEscrita     ir ao estado 38
    CmdLeitura     ir ao estado 39
    ChamadaProc    ir ao estado 40
    ChamadaFuncao  ir ao estado 41


Estado 64

   27 ListaId: T_ID .

    $padrão  reduzir usando a regra 27 (ListaId)


Estado 65

   22 Declaracao: Tipo ListaId . T_PONTO_E_VIRGULA
   26 ListaId: ListaId . T_VIRGULA T_ID

    T_VIRGULA          deslocar, e ir ao estado 103
    T_PONTO_E_VIRGULA  deslocar, e ir ao estado 104


Estado 66

   19 BlocoPrincipal: T_ABRE_CHAVES ListaCmd T_FECHA_CHAVES .

    $padrão  reduzir usando a regra 19 (BlocoPrincipal)


Estado 67

   29 ListaCmd: ListaCmd Comando .

    $padrão  reduzir usando a regra 29 (ListaCmd)


Estado 68

   54 ChamadaProc: ChamadaFuncao T_PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 54 (ChamadaProc)


Estado 69

    9 EscopoFuncaoVazia: TipoRetorno T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES .

    $padrão  reduzir usando a regra 9 (EscopoFuncaoVazia)


Estado 70

   10 EscopoFuncao: TipoRetorno T_ID T_ABRE_PARENTESES DeclParametros . T_FECHA_PARENTESES
   15 DeclParametros: DeclParametros . T_VIRGULA Parametro

    T_FECHA_PARENTESES  deslocar, e ir ao estado 105
    T_VIRGULA           deslocar, e ir ao estado 106


Estado 71

   16 DeclParametros: Parametro .

    $padrão  reduzir usando a regra 16 (DeclParametros)


Estado 72

   17 Parametro: Tipo . T_ID

    T_ID  deslocar, e ir ao estado 107


Estado 73

   70 FExpressaoAritmetica: T_ABRE_PARENTESES . ExpressaoAritmetica T_FECHA_PARENTESES
   80 FExpressaoLogica: T_ABRE_PARENTESES . ExpressaoLogica T_FECHA_PARENTESES

    T_SUBTRACAO        deslocar, e ir ao estado 49
    T_ABRE_PARENTESES  deslocar, e ir ao estado 73
    T_ID               deslocar, e ir ao estado 51
    T_NUM              deslocar, e ir ao estado 53
    T_NOT              deslocar, e ir ao estado 74

    ChamadaFuncao         ir ao estado 54
    ExpressaoAritmetica   ir ao estado 108
    TExpressaoAritmetica  ir ao estado 56
    FExpressaoAritmetica  ir ao estado 57
    ExpressaoLogica       ir ao estado 109
    FExpressaoLogica      ir ao estado 77


Estado 74

   79 FExpressaoLogica: T_NOT . FExpressaoLogica
